<resources>
    <string name="app_name">BookShare</string>
    <string name="app_logo">App logo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="type_username_here">Type username here</string>
    <string name="password">Password</string>
    <string name="go">Go</string>
    <string name="missingCredentials">Username or password is missing</string>
    <string name="missingInformation">First name or last name is missing</string>
    <string name="email">Email</string>
    <string name="new_user_details">New User Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="donation_lists">Donation Lists</string>
    <string name="list_definition">List Definition</string>
    <string name="add_list">Add List</string>
    <string name="list_name">Name:</string>
    <string name="list_description">Description:</string>
    <string name="donor_book_description">Donor Book Description</string>
    <string name="add_book">Add Book</string>
    <string name="book_picture">Book Picture</string>
    <string name="publisher">Publisher: </string>
    <string name="average_rating">Average Rating:</string>
    <string name="request">Request!</string>
    <string name="description">Description:</string>
    <string name="genre">Genre:</string>
    <string name="no_description_available">No Description Available</string>
    <string name="email_donor">Email Donor</string>
    <string name="receiver_book_description">Receiver Book Description</string>
    <string name="filter">Filter</string>
    <string name="filter_by_genre">Filter by Genre</string>
    <string name="filter_by_isbn">Filter by ISBN</string>
    <string name="filter_by_book_title">Filter by Book Title</string>
    <string name="clear_filters">Clear Filters</string>
</resources>